# 114_edgeAI

./: .RtpVideoStreamer.cpp.swp  .RtpVideoStreamer.hpp.swp  .gitignore  .main.cpp.swp  README.md
Lab1/: lab1.ipynb  lab1_data.py
Lab6/: CMakeLists.txt  RtpVideoStreamer.cpp  RtpVideoStreamer.hpp  main.cpp
Lab6/CloudServer/__MACOSX/: ._midea
Lab6/CloudServer/__MACOSX/midea/: ._main  ._main.go  ._main:Zone.Identifier
Lab6/EdgeAIClient/EdgeAIClient/: ContentView.swift  ContentViewModel.swift  EdgeAIClientApp.swift
Lab6/EdgeAIClient/EdgeAIClient.xcodeproj/: project.pbxproj
Lab6/EdgeAIClient/EdgeAIClient.xcodeproj/project.xcworkspace/xcuserdata/amk3y.xcuserdatad/: UserInterfaceState.xcuserstate
Lab6/EdgeAIClient/EdgeAIClient.xcodeproj/xcuserdata/amk3y.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Lab6/EdgeAIClient/EdgeAIClient.xcodeproj/xcuserdata/amk3y.xcuserdatad/xcschemes/: xcschememanagement.plist
Lab6/EdgeAIClient/EdgeAIClient/Model/: LastRecordMessage.swift  Record.swift  Record.swift:Zone.Identifier  RecordListMessage.swift
Lab6/EdgeAIClient/EdgeAIClientTests/: EdgeAIClientTests.swift
Lab6/EdgeAIClient/EdgeAIClientUITests/: EdgeAIClientUITests.swift  EdgeAIClientUITestsLaunchTests.swift
Lab6/EdgeAIClient/__MACOSX/: ._EdgeAIClient.xcodeproj
Lab6/EdgeAIClient/__MACOSX/EdgeAIClient/: ._ContentView.swift  ._ContentViewModel.swift  ._EdgeAIClientApp.swift
Lab6/EdgeAIClient/__MACOSX/EdgeAIClient.xcodeproj/: ._project.xcworkspace
Lab6/EdgeAIClient/__MACOSX/EdgeAIClient/Model/: ._LastRecordMessage.swift  ._Record.swift  ._RecordListMessage.swift
(+34 files in other folders)
